--- a/templates/meta.html
+++ b/templates/meta.html
@@ -2,9 +2,13 @@
 <html>
 <head>
     <title>Card | rendered with %lt;3 by cards.breq.dev</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/69d45d8e8c.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&amp;display=swap" rel="stylesheet">
     <style>
         .card {
-            height: 250px;
+            height: 300px;
             width: 500px;
             overflow: hidden;
         }
