--- a/templates/meta.html
+++ b/templates/meta.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Card | rendered with %lt;3 by cards.breq.dev</title>
+    <title>Card | rendered with ❤️ by cards.breq.dev</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/69d45d8e8c.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&amp;display=swap" rel="stylesheet">
     <style>
+        html {
+            height: 100%;
+        }
+        body {
+            background-color: #525252;
+            height: 100%;
+        }
+        .centering-parent {
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         .card {
+            position: relative;
             height: 300px;
             width: 500px;
             overflow: hidden;
+            border-style: none;
+            border-radius: 15px;
+            background-color: inherit;
         }
     </style>
 </head>
 <body>
-    {% block card %}
-    {% endblock %}
+    <div class="centering-parent">
+        {% block card %}
+        {% endblock %}
+    </div>
 </body>
