Set the background color of the card for the basic template

--- a/templates/cards/basic.html
+++ b/templates/cards/basic.html
@@ -1,5 +1,12 @@
 {% extends "meta.html" %}
 {% block card %}
+<style>
+    .card {
+        background-color: #FFF;
+        color: #000;
+        text-align: center;
+    }
+</style>
 <div class="card">
     <h1>{{ name }}</h1>
     <p>{{ bio }}</p>
