Make links target=_blank so they take users out of the iframe :facepalm:

--- a/templates/cards/dark-profile.html
+++ b/templates/cards/dark-profile.html
@@ -75,7 +75,7 @@
         </div>
     </div>
     <div class="small-print">
-        <span class="small">cards, made with <i class="fas fa-heart"></i> by <a href="https://breq.dev/">breq</a></span>
+        <span class="small">cards, made with <i class="fas fa-heart"></i> by <a target="_blank" href="https://breq.dev/">breq</a></span>
     </div>
 </div>
 {% endblock %}
